--- a/new-vegas/package.json
+++ b/new-vegas/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vueuse/core": "^9.5.0",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "postcss": "^8",
